--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,42 @@
-.card{
-  border: 1px solid white;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px black;
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  display: inline-block;
-  max-width: 250px;
-}
+body{
+  font-family: Arial, Helvetica, sans-serif;
 
-.card-image{
-  max-width: 60%;
-  height: auto;
-  border-radius: 50%;
+}
+.color-picker-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+h1{
+  margin: 50px;
+  font-size: 5rem;
+}
+.color-display{
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid hsl(0, 0%, 80%);
+  border-radius: 25px;
+  margin-bottom: 25px;
+  transition: 0.25 ease;
+}
+.color-display p{
+  color: hsl(0, 0%, 20%);
+  font-size: 2rem;
+  text-align: center;
+}
+label{
+  font-size: 1.5rem;
+  font-weight: bold;
   margin-bottom: 10px;
 }
-
-.card-title{
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  color: black;
-
-}
-
-.card-text{
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(42, 41, 41);
+input[type="color"]{
+width: 75px;
+height: 50px;
+padding:5px ;
+border-radius: 10px;
+border: 3px solid hsl(0, 0%, 80%);
 }
